# cpp_generate

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.json  main.cpp
data/: exampleClass.h
parser/: action.h
parser/callbacks/: ast_callback.h  macro_callback.h
templates/: cpp2c.inja  header.inja  proto.inja  registor.inja  rttr_header.inja
test/: CMakeLists.txt  main.cpp
tools/: config.h  files.cpp  files.h
